--- a/src/app/covid/covid.component.html
+++ b/src/app/covid/covid.component.html
@@ -1,3 +1,10 @@
 <h1>Ci sono {{numberOfProperties}} proprietà</h1>
 
 <p>Properties: {{ allProperties | json }}</p>
+
+<h1>Apis Info</h1>
+
+<div *ngFor="let item of allValues; index as i" style="border: 1px solid black;">
+    <p>Name : {{allProperties[i]}}</p>
+    <p>Endpoint : {{allValues[i]}}</p>
+</div>
